# DocTrack

./: .gitignore  Dockerfile  Readme.md  data.db  db.py  doctr-ocr.py  main.py  ocr.py  pyproject.toml  requirements-org.txt  requirements.txt  requirements2.txt  streamlit2.py  streamlit_app.py  tessocr.py
