[tool.poetry]
name = "railway-fastapi-template"
version = "0.1.0"
description = "This example starts up a FastAPI server"
authors = ["DeviousLab <deviouslab@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"
streamlit = "^1.41.1"
python-doctr = "^0.5.1"  # Adjust to the doctr version you need
torch = "^2.0.0"  # Required for doctr
numpy = "^1.24.0"
Pillow = "^9.5.0"
opencv-python-headless = "^4.7.0"  # Required for image processing


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
apt = ["libgl1", "libglib2.0-0"]
build-backend = "poetry.core.masonry.api"