[tool.poetry]
name = "railway-fastapi-template"
version = "0.1.0"
description = "This example starts up a FastAPI server"
authors = ["DeviousLab <deviouslab@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.2"
fastapi = "^0.115.6"
uvicorn = "^0.32.0"
streamlit = "^1.41.1"
hypercorn = "^0.17.3"
python-doctr = "^0.10.0"  # Adjust to the doctr version you need
torch = "^2.5.1"  # Required for doctr
torchvision = "^0.20.1"
tf2onnx = "^1.8.4"
# numpy = "^1.26.4"
# Pillow = "^11.0.0"
# opencv-python-headless = "^4.10.0.84"  # Required for image processing


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
apt = ["libgl1", "libglib2.0-0"]
build-backend = "poetry.core.masonry.api"
